2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-entry.c:
    * libseahorse/seahorse-secure-memory.c: Fix problems with secure entry
    sometimes corrupting non paged memory blocks. 

2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent.c:
    * data/seahorse.schemas.in:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Change 'use-agent' gpg.conf setting
    from the preferences rather than the agent itself.

2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c:
    * agent/seahorse-agent-main.c:
    * agent/seahorse-agent.1:
    * agent/seahorse-agent.h: Add agent option to allow requests to 
    come from any display. 

2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>

	* agent/Makefile.am:
	* agent/seahorse-agent-main.c (added):
	* agent/seahorse-agent.1 (added):
	* daemon/Makefile.am:
	* daemon/seahorse-daemon.1:
	* daemon/seahorse-daemon.c: Split apart seahorse-agent and 
	seahorse-daemon into different processes similar to described on 
	the mailing list.

2006-12-09  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui.pc.in:
    * plugins/nautilus/Makefile.am: Fix problem with ignoring 
    --datarootdir. Patch from Christopher Taylor. Fixes #354245.
    * plugins/applet/seahorse-applet.c: Fix compile warning.

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c: Fix critical warnings when closing 
    window or deleting a key. Fixes #358697, #362711

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-context.c: Fix bad arguments to 
    g_idle_add_full

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-add-subkey.c:
    * libseahorse/seahorse-pgp-key-op.c: Fix Add subkey dialog.
