@@ -644,7 +644,157 @@
 		</packing>
 	      </child>
 
-	      <child>
+	            <child>
+                 <widget class="GtkVBox" id="agent-start"> 	 
+                   <property name="homogeneous">False</property> 	 
+                   <property name="spacing">6</property> 	 
+                   <property name="visible">False</property> 	 
+  	 
+                   <child> 	 
+                     <widget class="GtkHSeparator" id="hseparator2"> 	 
+                       <property name="visible">True</property> 	 
+                     </widget> 	 
+                     <packing> 	 
+                       <property name="padding">0</property> 	 
+                       <property name="expand">True</property> 	 
+                       <property name="fill">True</property> 	 
+                     </packing> 	 
+                   </child> 	 
+  	 
+                   <child> 	 
+                     <widget class="GtkLabel" id="label7"> 	 
+                       <property name="width_request">407</property> 	 
+                       <property name="visible">True</property> 	 
+                       <property name="label" translatable="yes">&lt;b&gt;Warning:&lt;/b&gt; The 'seahorse-agent' program is not running. This program is necessary in order to cache passphrases. </property> 	 
+                       <property name="use_underline">False</property> 	 
+                       <property name="use_markup">True</property> 	 
+                       <property name="justify">GTK_JUSTIFY_LEFT</property> 	 
+                       <property name="wrap">True</property> 	 
+                       <property name="selectable">False</property> 	 
+                       <property name="xalign">0</property> 	 
+                       <property name="yalign">0</property> 	 
+                       <property name="xpad">0</property> 	 
+                       <property name="ypad">0</property> 	 
+                       <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property> 	 
+                       <property name="width_chars">-1</property> 	 
+                       <property name="single_line_mode">False</property> 	 
+                       <property name="angle">0</property> 	 
+                     </widget> 	 
+                     <packing> 	 
+                       <property name="padding">0</property> 	 
+                       <property name="expand">False</property> 	 
+                       <property name="fill">False</property> 	 
+                     </packing> 	 
+                   </child> 	 
+  	 
+                   <child> 	 
+                     <widget class="GtkHBox" id="hbox8"> 	 
+                       <property name="visible">True</property> 	 
+                       <property name="homogeneous">True</property> 	 
+                       <property name="spacing">0</property> 	 
+  	 
+                       <child> 	 
+                         <placeholder/> 	 
+                       </child> 	 
+  	 
+                       <child> 	 
+                         <widget class="GtkButton" id="start-link"> 	 
+                           <property name="visible">True</property> 	 
+                           <property name="can_focus">True</property> 	 
+                           <property name="relief">GTK_RELIEF_NONE</property> 	 
+                           <property name="focus_on_click">True</property> 	 
+                           <signal name="pressed" handler="on_start_link" last_modification_time="Tue, 05 Oct 2004 00:52:48 GMT"/> 	 
+  	 
+                           <child> 	 
+                             <widget class="GtkAlignment" id="alignment1"> 	 
+                               <property name="visible">True</property> 	 
+                               <property name="xalign">0.5</property> 	 
+                               <property name="yalign">0.5</property> 	 
+                               <property name="xscale">0</property> 	 
+                               <property name="yscale">0</property> 	 
+                               <property name="top_padding">0</property> 	 
+                               <property name="bottom_padding">0</property> 	 
+                               <property name="left_padding">0</property> 	 
+                               <property name="right_padding">0</property> 	 
+  	 
+                               <child> 	 
+                                 <widget class="GtkHBox" id="hbox4"> 	 
+                                   <property name="visible">True</property> 	 
+                                   <property name="homogeneous">False</property> 	 
+                                   <property name="spacing">2</property> 	 
+  	 
+                                   <child> 	 
+                                     <widget class="GtkImage" id="image1"> 	 
+                                       <property name="visible">True</property> 	 
+                                       <property name="stock">gtk-execute</property> 	 
+                                       <property name="icon_size">4</property> 	 
+                                       <property name="xalign">0.5</property> 	 
+                                       <property name="yalign">0.5</property> 	 
+                                       <property name="xpad">0</property> 	 
+                                       <property name="ypad">0</property> 	 
+                                     </widget> 	 
+                                     <packing> 	 
+                                       <property name="padding">0</property> 	 
+                                       <property name="expand">False</property> 	 
+                                       <property name="fill">False</property> 	 
+                                     </packing> 	 
+                                   </child> 	 
+  	 
+                                   <child> 	 
+                                     <widget class="GtkLabel" id="label-start-seahorse-daemon"> 	 
+                                       <property name="visible">True</property> 	 
+                                       <property name="label" translatable="yes">Start seahorse-agent</property> 	 
+                                       <property name="use_underline">True</property> 	 
+                                       <property name="use_markup">False</property> 	 
+                                       <property name="justify">GTK_JUSTIFY_LEFT</property> 	 
+                                       <property name="wrap">False</property> 	 
+                                       <property name="selectable">False</property> 	 
+                                       <property name="xalign">0.5</property> 	 
+                                       <property name="yalign">0.5</property> 	 
+                                       <property name="xpad">0</property> 	 
+                                       <property name="ypad">0</property> 	 
+                                       <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property> 	 
+                                       <property name="width_chars">-1</property> 	 
+                                       <property name="single_line_mode">False</property> 	 
+                                       <property name="angle">0</property> 	 
+                                     </widget> 	 
+                                     <packing> 	 
+                                       <property name="padding">0</property> 	 
+                                       <property name="expand">False</property> 	 
+                                       <property name="fill">False</property> 	 
+                                     </packing> 	 
+                                   </child> 	 
+                                 </widget> 	 
+                               </child> 	 
+                             </widget> 	 
+                           </child> 	 
+                         </widget> 	 
+                         <packing> 	 
+                           <property name="padding">0</property> 	 
+                           <property name="expand">False</property> 	 
+                           <property name="fill">False</property> 	 
+                         </packing> 	 
+                       </child> 	 
+  	 
+                       <child> 	 
+                         <placeholder/> 	 
+                       </child> 	 
+                     </widget> 	 
+                     <packing> 	 
+                       <property name="padding">6</property> 	 
+                       <property name="expand">False</property> 	 
+                       <property name="fill">False</property> 	 
+                     </packing> 	 
+                   </child> 	 
+                 </widget> 	 
+                 <packing> 	 
+                   <property name="padding">12</property> 	 
+                   <property name="expand">False</property> 	 
+                   <property name="fill">True</property> 	 
+                 </packing> 	 
+               </child> 	 
+  	 
+       <child>
 		<widget class="GtkVBox" id="agent-started">
 		  <property name="homogeneous">False</property>
 		  <property name="spacing">6</property>
