@@ -1,5 +1,12 @@
 2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-passphrase.c:
+    * libseahorse/seahorse-prefs-cache.c:
+    * libseahorse/seahorse-prefs.glade: Properly start seahorse-agent
+    from preferences, now that it's a different binary.
+
+2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-secure-entry.c:
     * libseahorse/seahorse-secure-memory.c: Fix problems with secure entry
     sometimes corrupting non paged memory blocks. 
